src/app/sidenav/sidenav.component.scss
:host {
    display: block;
    width: 79px;
    transition: 100ms linear width;

    .subbug-tagline {
        display: none
    }
    .subbug-logo {
        display: block;
        text-align: center;
        line-height: 56px;
        position: relative;
        cursor: pointer;
        margin-top: 19px;

        svg {
            display: none;
        }
    }

    .toggle {
        display: block;
        text-align: center;
        line-height: 56px;
        position: relative;
        cursor: pointer;

        mat-icon {
            top: 6px;
            position: relative;
            color: #E1E2ED;
            width: 25px;
        }
    }

    .lists-container {
        display: flex;
        flex-direction: row;

        ul.nav-list, ol.nav-list,
        ul.subnav-list, ol.subnav-list {
            display: block;
            list-style-type: none;
            margin: 0;
            padding: 0;
        }
    }
    ul.nav-list, ol.nav-list,
    ul.subnav-list, ol.subnav-list {
        display: block;
        min-width: 79px;
        margin: 0;
        padding: 0;
        color: #757686;

        li {
            background-color: #3c3a3c;
            box-sizing: border-box;
            vertical-align: middle;
            text-align: center;
            line-height: 56px;
            position: relative;
            a {
                border: none;
                box-sizing: border-box;
                text-decoration: none;
            }
            mat-icon, svg {
                top: 6px;
                position: relative;
                color: #757686;
                fill: #757686;
                width: 25px;
            }
            &.separator {
                background-color: #403e40;
                height: 1px;
                /*margin-top: 5px;
                margin-bottom: 5px;*/
                &:hover {
                    border-left: none;
                }
            }
        }
    }

    ul.subnav-list, ol.subnav-list {
        background-color: #60616F;
        li {
            display: none;
        }
    }

    ul.nav-list, ol.nav-list {
        /*list-style-type: none;
        min-width: 79px;
        margin: 0;
        padding: 0;
        color: #757686;*/

        li {
            /*background-color: #3c3a3c;
            box-sizing: border-box;
            vertical-align: middle;
            text-align: center;
            line-height: 56px;
            position: relative;
            */
            padding-left: 3px; // adjust for the non-highlighted items having no accent color
            /*
            a {
                border: none;
                box-sizing: border-box;
                text-decoration: none;
            }
            mat-icon, svg {
                top: 6px;
                position: relative;
                color: #757686;
                fill: #757686;
                width: 25px;
            }*/

            &.active {
                cursor: default !important;
                color: #3FD0F5 !important;
                background-color: #444245;
                border-left: solid 3px #3FD0F5 !important;
                padding-left: 0;
                /*
                &:hover {
                    cursor: default;
                    color: #3FD0F5;
                    mat-icon {
                        color: #3FD0F5;
                    }
                }*/
                
                mat-icon, svg {
                    color: #3FD0F5 !important;
                    fill: #3FD0F5 !important;
                }
            }
            &:hover {
                cursor: pointer;
                color: #dde2ff;
                background-color: #444245;
                border-left: solid 3px #dde2ff;
                padding-left: 0;

                mat-icon, svg {
                    color: #dde2ff;
                    fill:  #dde2ff;
                }
            }
        }
    }

    /* make only search subnav items visible when selected */
    &.subnav-search-visible {
        ul.subnav-list, ol.subnav-list {
            margin-top: 56px !important;
            li.selected-search {
                display: block;
            }
        }
    }
    /* make only admin subnav items visible when selected */
    &.subnav-admin-visible {
        ul.subnav-list, ol.subnav-list {
            margin-top: calc(56px * 7 + 1px) !important;
            li.selected-admin {
                display: block;
            }
        }
    }
    /* make only datasources subnav items visible when selected */
    &.subnav-datasources-visible {
        ul.subnav-list, ol.subnav-list {
            margin-top: calc(56px * 5 + 1px) !important;
            li.selected-datasources {
                display: block;
            }
        }
    }

    &.expanded {
        width: 255px;
        overflow: hidden;
        
        &.subnav-expanded {
            width: calc(255px + 240px);
            ul.nav-list, ol.nav-list {
                width: 255px;
            }
            ul.subnav-list, ol.subnav-list {
                background-color: transparent;
                width: calc(240px - 17px);
                color: #E1E2ED;
                padding-left: 17px;
                /* Label / Medium Label */
                font-family: Montserrat;
                font-style: normal;
                font-weight: bold;
                font-size: 14px;
                line-height: 20px;

                li {
                    background-color: transparent;
                    text-align: left;
                }
            }
        }

        .subbug-logo {
            display: block;
            text-align: left;
            line-height: unset;
            position: unset;
            margin-top: 24px;
            margin-left: 19px;

            img.small-logo {
                display: none;
            }
            svg {
                display: inline-block;
            }
        }
        .subbug-tagline {
            display: block;
            margin-top: 1px;
            margin-left: 19px;
            margin-bottom: 28px;
            /* Subtitle / Subtitle 1 */
            font-family: Montserrat;
            font-style: normal;
            font-weight: bold;
            font-size: 18px;
            line-height: 28px;
            /* identical to box height, or 156% */
            font-feature-settings: 'liga' off;
            /* sidebar / gray */
            color: #A4A6B3;
            opacity: 0.7;
        }

        ul.nav-list, ol.nav-list {
            width: 100%;
            li {
                text-align: left;
                padding-left: 29px;
                font-size: 14px;
                white-space: nowrap;

                mat-icon, svg {
                    margin-right: 19px;
                }
                &:hover, &.active {
                    padding-left: calc(29px - 3px); // adjust for the non-highlighted items having no accent color
                }
            }
        }
    }
}

